--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,10 @@
 #
 #    pip-compile requirements.in
 #
-certifi==2019.9.11        # via requests
-chardet==3.0.4            # via requests
-django==2.2.5
-gunicorn==19.9.0
-idna==2.8                 # via requests
-pytz==2019.2              # via django
-requests==2.22.0
+django==2.2.7
+gunicorn==20.0.0
+pytz==2019.3              # via django
 sqlparse==0.3.0           # via django
-urllib3==1.25.3           # via requests
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools==41.6.0        # via gunicorn
