--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,17 +5,19 @@
 #    pip-compile requirements-dev.in
 #
 astroid==2.3.3            # via pylint
+django-prometheus==1.1.0
 django==2.2.7
 entrypoints==0.3          # via flake8
 flake8==3.7.9
 freezegun==0.3.12
-gunicorn==20.0.0
+gunicorn==20.0.4
 isort==4.3.21             # via pylint
 lazy-object-proxy==1.4.3  # via astroid
 mccabe==0.6.1             # via flake8, pylint
+prometheus-client==0.7.1  # via django-prometheus
 pycodestyle==2.5.0        # via flake8
 pyflakes==2.1.1           # via flake8
-pylint-django==2.0.12
+pylint-django==2.0.13
 pylint-plugin-utils==0.6  # via pylint-django
 pylint==2.4.4
 python-dateutil==2.8.1    # via freezegun
@@ -26,4 +28,4 @@ typed-ast==1.4.0          # via astroid
 wrapt==1.11.2             # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.6.0        # via gunicorn
+# setuptools==42.0.2        # via gunicorn
