--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,28 +4,53 @@
 #
 #    pip-compile requirements-dev.in
 #
+arrow==0.15.5             # via django-q
+asgiref==3.2.3            # via daphne, django
 astroid==2.3.3            # via pylint
-django-prometheus==2.0.0
-django==2.2.10
+attrs==19.3.0             # via automat, service-identity, twisted
+autobahn==20.3.1          # via daphne
+automat==20.2.0           # via twisted
+blessed==1.17.2           # via django-q
+cffi==1.14.0              # via cryptography
+constantly==15.1.0        # via twisted
+cryptography==2.8         # via autobahn, pyopenssl, service-identity
+daphne==2.4.1             # via -r requirements-dev.in
+django-picklefield==2.1.1  # via django-q
+django-prometheus==2.0.0  # via -r requirements-dev.in
+django-q==1.2.1           # via -r requirements-dev.in
+django==3.0.4             # via -r requirements-dev.in, django-picklefield, django-q
 entrypoints==0.3          # via flake8
-flake8==3.7.9
-freezegun==0.3.14
-gunicorn==20.0.4
+flake8==3.7.9             # via -r requirements-dev.in
+freezegun==0.3.15         # via -r requirements-dev.in
+hyperlink==19.0.0         # via twisted
+idna==2.9                 # via hyperlink, twisted
+incremental==17.5.0       # via twisted
 isort==4.3.21             # via pylint
 lazy-object-proxy==1.4.3  # via astroid
 mccabe==0.6.1             # via flake8, pylint
 prometheus-client==0.7.1  # via django-prometheus
+pyasn1-modules==0.2.8     # via service-identity
+pyasn1==0.4.8             # via pyasn1-modules, service-identity
 pycodestyle==2.5.0        # via flake8
+pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
-pylint-django==2.0.13
+pyhamcrest==2.0.2         # via twisted
+pylint-django==2.0.14     # via -r requirements-dev.in
 pylint-plugin-utils==0.6  # via pylint-django
-pylint==2.4.4
-python-dateutil==2.8.1    # via freezegun
+pylint==2.4.4             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
+pyopenssl==19.1.0         # via twisted
+python-dateutil==2.8.1    # via arrow, freezegun
+python-memcached==1.59    # via -r requirements-dev.in
 pytz==2019.3              # via django
-six==1.14.0               # via astroid, freezegun, python-dateutil
-sqlparse==0.3.0           # via django
+service-identity==18.1.0  # via twisted
+six==1.14.0               # via astroid, automat, blessed, cryptography, freezegun, pyopenssl, python-dateutil, python-memcached, txaio
+sqlparse==0.3.1           # via django
+twisted[tls]==19.10.0     # via daphne
+txaio==20.1.1             # via autobahn
 typed-ast==1.4.1          # via astroid
+wcwidth==0.1.8            # via blessed
 wrapt==1.11.2             # via astroid
+zope.interface==4.7.1     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
