--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,21 +4,17 @@
 #
 #    pip-compile requirements-dev.in
 #
-arrow==0.15.5             # via django-q
-asgiref==3.2.3            # via daphne, django
+asgiref==3.2.5            # via daphne, django
 astroid==2.3.3            # via pylint
 attrs==19.3.0             # via automat, service-identity, twisted
 autobahn==20.3.1          # via daphne
 automat==20.2.0           # via twisted
-blessed==1.17.2           # via django-q
 cffi==1.14.0              # via cryptography
 constantly==15.1.0        # via twisted
 cryptography==2.8         # via autobahn, pyopenssl, service-identity
 daphne==2.4.1             # via -r requirements-dev.in
-django-picklefield==2.1.1  # via django-q
 django-prometheus==2.0.0  # via -r requirements-dev.in
-django-q==1.2.1           # via -r requirements-dev.in
-django==3.0.4             # via -r requirements-dev.in, django-picklefield, django-q
+django==3.0.4             # via -r requirements-dev.in
 entrypoints==0.3          # via flake8
 flake8==3.7.9             # via -r requirements-dev.in
 freezegun==0.3.15         # via -r requirements-dev.in
@@ -39,18 +35,16 @@ pylint-django==2.0.14     # via -r requirements-dev.in
 pylint-plugin-utils==0.6  # via pylint-django
 pylint==2.4.4             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
 pyopenssl==19.1.0         # via twisted
-python-dateutil==2.8.1    # via arrow, freezegun
-python-memcached==1.59    # via -r requirements-dev.in
+python-dateutil==2.8.1    # via freezegun
 pytz==2019.3              # via django
 service-identity==18.1.0  # via twisted
-six==1.14.0               # via astroid, automat, blessed, cryptography, freezegun, pyopenssl, python-dateutil, python-memcached, txaio
+six==1.14.0               # via astroid, automat, cryptography, freezegun, pyopenssl, python-dateutil, txaio
 sqlparse==0.3.1           # via django
 twisted[tls]==19.10.0     # via daphne
 txaio==20.1.1             # via autobahn
 typed-ast==1.4.1          # via astroid
-wcwidth==0.1.8            # via blessed
 wrapt==1.11.2             # via astroid
-zope.interface==4.7.1     # via twisted
+zope.interface==4.7.2     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
