--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,16 @@
 #
 #    pip-compile requirements.in
 #
-asgiref==3.2.5            # via daphne, django
+asgiref==3.2.7            # via daphne, django
 attrs==19.3.0             # via automat, service-identity, twisted
-autobahn==20.3.1          # via daphne
+autobahn==20.4.1          # via daphne
 automat==20.2.0           # via twisted
 cffi==1.14.0              # via cryptography
 constantly==15.1.0        # via twisted
 cryptography==2.8         # via autobahn, pyopenssl, service-identity
 daphne==2.4.1             # via -r requirements.in
 django-prometheus==2.0.0  # via -r requirements.in
-django==3.0.4             # via -r requirements.in
+django==3.0.5             # via -r requirements.in
 hyperlink==19.0.0         # via twisted
 idna==2.9                 # via hyperlink, twisted
 incremental==17.5.0       # via twisted
@@ -25,11 +25,11 @@ pyhamcrest==2.0.2         # via twisted
 pyopenssl==19.1.0         # via twisted
 pytz==2019.3              # via django
 service-identity==18.1.0  # via twisted
-six==1.14.0               # via automat, cryptography, pyopenssl, txaio
+six==1.14.0               # via automat, cryptography, pyopenssl
 sqlparse==0.3.1           # via django
-twisted[tls]==19.10.0     # via daphne
-txaio==20.1.1             # via autobahn
-zope.interface==4.7.2     # via twisted
+twisted[tls]==20.3.0      # via daphne
+txaio==20.4.1             # via autobahn
+zope.interface==5.0.2     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
