--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,14 +5,14 @@
 #    pip-compile requirements-dev.in
 #
 asgiref==3.2.7            # via daphne, django
-astroid==2.3.3            # via pylint
+astroid==2.4.0            # via pylint
 attrs==19.3.0             # via automat, service-identity, twisted
-autobahn==20.4.1          # via daphne
+autobahn==20.4.3          # via daphne
 automat==20.2.0           # via twisted
 cffi==1.14.0              # via cryptography
 constantly==15.1.0        # via twisted
-cryptography==2.8         # via autobahn, pyopenssl, service-identity
-daphne==2.4.1             # via -r requirements-dev.in
+cryptography==2.9.2       # via autobahn, pyopenssl, service-identity
+daphne==2.5.0             # via -r requirements-dev.in
 django-prometheus==2.0.0  # via -r requirements-dev.in
 django==3.0.5             # via -r requirements-dev.in
 entrypoints==0.3          # via flake8
@@ -31,20 +31,20 @@ pycodestyle==2.5.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.1.1           # via flake8
 pyhamcrest==2.0.2         # via twisted
-pylint-django==2.0.14     # via -r requirements-dev.in
+pylint-django==2.0.15     # via -r requirements-dev.in
 pylint-plugin-utils==0.6  # via pylint-django
-pylint==2.4.4             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
+pylint==2.5.0             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
 pyopenssl==19.1.0         # via twisted
 python-dateutil==2.8.1    # via freezegun
-pytz==2019.3              # via django
+pytz==2020.1              # via django
 service-identity==18.1.0  # via twisted
 six==1.14.0               # via astroid, automat, cryptography, freezegun, pyopenssl, python-dateutil
 sqlparse==0.3.1           # via django
+toml==0.10.0              # via pylint
 twisted[tls]==20.3.0      # via daphne
 txaio==20.4.1             # via autobahn
-typed-ast==1.4.1          # via astroid
-wrapt==1.11.2             # via astroid
-zope.interface==5.0.2     # via twisted
+wrapt==1.12.1             # via astroid
+zope.interface==5.1.0     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
