--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,7 @@
 #    pip-compile requirements-dev.in
 #
 asgiref==3.2.7            # via daphne, django
-astroid==2.4.0            # via pylint
+astroid==2.4.1            # via pylint
 attrs==19.3.0             # via automat, service-identity, twisted
 autobahn==20.4.3          # via daphne
 automat==20.2.0           # via twisted
@@ -14,12 +14,12 @@ constantly==15.1.0        # via twisted
 cryptography==2.9.2       # via autobahn, pyopenssl, service-identity
 daphne==2.5.0             # via -r requirements-dev.in
 django-prometheus==2.0.0  # via -r requirements-dev.in
-django==3.0.5             # via -r requirements-dev.in
-entrypoints==0.3          # via flake8
-flake8==3.7.9             # via -r requirements-dev.in
+django==3.0.6             # via -r requirements-dev.in
+flake8==3.8.1             # via -r requirements-dev.in
 freezegun==0.3.15         # via -r requirements-dev.in
 hyperlink==19.0.0         # via twisted
 idna==2.9                 # via hyperlink, twisted
+importlib-metadata==1.6.0  # via flake8
 incremental==17.5.0       # via twisted
 isort==4.3.21             # via pylint
 lazy-object-proxy==1.4.3  # via astroid
@@ -27,13 +27,13 @@ mccabe==0.6.1             # via flake8, pylint
 prometheus-client==0.7.1  # via django-prometheus
 pyasn1-modules==0.2.8     # via service-identity
 pyasn1==0.4.8             # via pyasn1-modules, service-identity
-pycodestyle==2.5.0        # via flake8
+pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
-pyflakes==2.1.1           # via flake8
+pyflakes==2.2.0           # via flake8
 pyhamcrest==2.0.2         # via twisted
 pylint-django==2.0.15     # via -r requirements-dev.in
 pylint-plugin-utils==0.6  # via pylint-django
-pylint==2.5.0             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
+pylint==2.5.2             # via -r requirements-dev.in, pylint-django, pylint-plugin-utils
 pyopenssl==19.1.0         # via twisted
 python-dateutil==2.8.1    # via freezegun
 pytz==2020.1              # via django
@@ -43,7 +43,9 @@ sqlparse==0.3.1           # via django
 toml==0.10.0              # via pylint
 twisted[tls]==20.3.0      # via daphne
 txaio==20.4.1             # via autobahn
+typed-ast==1.4.1          # via astroid
 wrapt==1.12.1             # via astroid
+zipp==3.1.0               # via importlib-metadata
 zope.interface==5.1.0     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
