--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements-dev.in
 #
-asgiref==3.3.1
+asgiref==3.3.2
     # via
     #   daphne
     #   django
@@ -32,7 +32,7 @@ daphne==3.0.1
     # via -r requirements-dev.in
 django-prometheus==2.1.0
     # via -r requirements-dev.in
-django==3.1.7
+django==3.2
     # via -r requirements-dev.in
 flake8==3.9.0
     # via -r requirements-dev.in
@@ -46,7 +46,7 @@ idna==3.1
     # via
     #   hyperlink
     #   twisted
-importlib-metadata==3.9.1
+importlib-metadata==3.10.0
     # via flake8
 incremental==21.3.0
     # via twisted
@@ -58,7 +58,7 @@ mccabe==0.6.1
     # via
     #   flake8
     #   pylint
-prometheus-client==0.9.0
+prometheus-client==0.10.0
     # via django-prometheus
 pyasn1-modules==0.2.8
     # via service-identity
@@ -76,7 +76,7 @@ pylint-django==2.4.2
     # via -r requirements-dev.in
 pylint-plugin-utils==0.6
     # via pylint-django
-pylint==2.7.2
+pylint==2.7.4
     # via
     #   -r requirements-dev.in
     #   pylint-django
@@ -105,7 +105,9 @@ txaio==21.2.1
 typed-ast==1.4.2
     # via astroid
 typing-extensions==3.7.4.3
-    # via importlib-metadata
+    # via
+    #   asgiref
+    #   importlib-metadata
 wrapt==1.12.1
     # via astroid
 zipp==3.4.1
