--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-asgiref==3.3.1
+asgiref==3.3.2
     # via
     #   daphne
     #   django
@@ -30,7 +30,7 @@ daphne==3.0.1
     # via -r requirements.in
 django-prometheus==2.1.0
     # via -r requirements.in
-django==3.1.7
+django==3.2
     # via -r requirements.in
 hyperlink==21.0.0
     # via
@@ -42,7 +42,7 @@ idna==3.1
     #   twisted
 incremental==21.3.0
     # via twisted
-prometheus-client==0.9.0
+prometheus-client==0.10.0
     # via django-prometheus
 pyasn1-modules==0.2.8
     # via service-identity
@@ -68,6 +68,8 @@ twisted[tls]==21.2.0
     # via daphne
 txaio==21.2.1
     # via autobahn
+typing-extensions==3.7.4.3
+    # via asgiref
 zope.interface==5.3.0
     # via twisted
 
