--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,13 +4,13 @@
 #
 #    pip-compile requirements-dev.in
 #
-asgiref==3.3.2
+asgiref==3.3.4
     # via
     #   daphne
     #   django
-astroid==2.5.2
+astroid==2.5.6
     # via pylint
-attrs==20.3.0
+attrs==21.2.0
     # via
     #   automat
     #   service-identity
@@ -28,13 +28,13 @@ cryptography==3.4.7
     #   autobahn
     #   pyopenssl
     #   service-identity
-daphne==3.0.1
+daphne==3.0.2
     # via -r requirements-dev.in
 django-prometheus==2.1.0
     # via -r requirements-dev.in
-django==3.2
+django==3.2.2
     # via -r requirements-dev.in
-flake8==3.9.0
+flake8==3.9.2
     # via -r requirements-dev.in
 freezegun==1.1.0
     # via -r requirements-dev.in
@@ -46,7 +46,7 @@ idna==3.1
     # via
     #   hyperlink
     #   twisted
-importlib-metadata==3.10.0
+importlib-metadata==4.0.1
     # via flake8
 incremental==21.3.0
     # via twisted
@@ -58,7 +58,7 @@ mccabe==0.6.1
     # via
     #   flake8
     #   pylint
-prometheus-client==0.10.0
+prometheus-client==0.10.1
     # via django-prometheus
 pyasn1-modules==0.2.8
     # via service-identity
@@ -72,11 +72,11 @@ pycparser==2.20
     # via cffi
 pyflakes==2.3.1
     # via flake8
-pylint-django==2.4.2
+pylint-django==2.4.4
     # via -r requirements-dev.in
 pylint-plugin-utils==0.6
     # via pylint-django
-pylint==2.7.4
+pylint==2.8.2
     # via
     #   -r requirements-dev.in
     #   pylint-django
@@ -87,13 +87,14 @@ python-dateutil==2.8.1
     # via freezegun
 pytz==2021.1
     # via django
-service-identity==18.1.0
+service-identity==21.1.0
     # via twisted
-six==1.15.0
+six==1.16.0
     # via
     #   automat
     #   pyopenssl
     #   python-dateutil
+    #   service-identity
 sqlparse==0.4.1
     # via django
 toml==0.10.2
@@ -102,9 +103,9 @@ twisted[tls]==21.2.0
     # via daphne
 txaio==21.2.1
     # via autobahn
-typed-ast==1.4.2
+typed-ast==1.4.3
     # via astroid
-typing-extensions==3.7.4.3
+typing-extensions==3.10.0.0
     # via
     #   asgiref
     #   importlib-metadata
@@ -112,7 +113,7 @@ wrapt==1.12.1
     # via astroid
 zipp==3.4.1
     # via importlib-metadata
-zope.interface==5.3.0
+zope.interface==5.4.0
     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
