--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile requirements.in
 #
-asgiref==3.3.2
+asgiref==3.3.4
     # via
     #   daphne
     #   django
-attrs==20.3.0
+attrs==21.2.0
     # via
     #   automat
     #   service-identity
@@ -26,11 +26,11 @@ cryptography==3.4.7
     #   autobahn
     #   pyopenssl
     #   service-identity
-daphne==3.0.1
+daphne==3.0.2
     # via -r requirements.in
 django-prometheus==2.1.0
     # via -r requirements.in
-django==3.2
+django==3.2.2
     # via -r requirements.in
 hyperlink==21.0.0
     # via
@@ -42,7 +42,7 @@ idna==3.1
     #   twisted
 incremental==21.3.0
     # via twisted
-prometheus-client==0.10.0
+prometheus-client==0.10.1
     # via django-prometheus
 pyasn1-modules==0.2.8
     # via service-identity
@@ -56,21 +56,22 @@ pyopenssl==20.0.1
     # via twisted
 pytz==2021.1
     # via django
-service-identity==18.1.0
+service-identity==21.1.0
     # via twisted
-six==1.15.0
+six==1.16.0
     # via
     #   automat
     #   pyopenssl
+    #   service-identity
 sqlparse==0.4.1
     # via django
 twisted[tls]==21.2.0
     # via daphne
 txaio==21.2.1
     # via autobahn
-typing-extensions==3.7.4.3
+typing-extensions==3.10.0.0
     # via asgiref
-zope.interface==5.3.0
+zope.interface==5.4.0
     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
