--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asgiref==3.3.4
     # via
     #   daphne
     #   django
+astroid==2.5.6
+    # via pylint
 attrs==21.2.0
     # via
     #   automat
@@ -30,19 +32,33 @@ daphne==3.0.2
     # via -r requirements.in
 django-prometheus==2.1.0
     # via -r requirements.in
-django==3.2.3
+django==3.2.4
+    # via -r requirements.in
+flake8==3.9.2
+    # via -r requirements.in
+freezegun==1.1.0
     # via -r requirements.in
 hyperlink==21.0.0
     # via
     #   autobahn
     #   twisted
-idna==3.1
+idna==3.2
     # via
     #   hyperlink
     #   twisted
+importlib-metadata==4.5.0
+    # via flake8
 incremental==21.3.0
     # via twisted
-prometheus-client==0.10.1
+isort==5.8.0
+    # via pylint
+lazy-object-proxy==1.6.0
+    # via astroid
+mccabe==0.6.1
+    # via
+    #   flake8
+    #   pylint
+prometheus-client==0.11.0
     # via django-prometheus
 pyasn1-modules==0.2.8
     # via service-identity
@@ -50,10 +66,25 @@ pyasn1==0.4.8
     # via
     #   pyasn1-modules
     #   service-identity
+pycodestyle==2.7.0
+    # via flake8
 pycparser==2.20
     # via cffi
+pyflakes==2.3.1
+    # via flake8
+pylint-django==2.4.4
+    # via -r requirements.in
+pylint-plugin-utils==0.6
+    # via pylint-django
+pylint==2.8.3
+    # via
+    #   -r requirements.in
+    #   pylint-django
+    #   pylint-plugin-utils
 pyopenssl==20.0.1
     # via twisted
+python-dateutil==2.8.1
+    # via freezegun
 pytz==2021.1
     # via django
 service-identity==21.1.0
@@ -62,15 +93,26 @@ six==1.16.0
     # via
     #   automat
     #   pyopenssl
+    #   python-dateutil
     #   service-identity
 sqlparse==0.4.1
     # via django
+toml==0.10.2
+    # via pylint
 twisted[tls]==21.2.0
     # via daphne
 txaio==21.2.1
     # via autobahn
+typed-ast==1.4.3
+    # via astroid
 typing-extensions==3.10.0.0
-    # via asgiref
+    # via
+    #   asgiref
+    #   importlib-metadata
+wrapt==1.12.1
+    # via astroid
+zipp==3.4.1
+    # via importlib-metadata
 zope.interface==5.4.0
     # via twisted
 
